# PolicyGraph

./: .gitignore  Dockerfile  PROJECT_INFO.md  README.md  __init__.py  check_rules_v2.py  config.py  logging_utils.py  pyproject.toml  requirements.txt  server_log.txt  test_query.py
api/: models.py  server.py
data/indices/: bm25.pkl  graph.json
data/indices/faiss_index/: index.faiss  index.pkl
data/raw/: Aadhaar_Enrollment.txt  Ayushman_Bharat.txt  PM_KISAN.txt  Passport_Application.txt  Property_Registration.txt  Voter_ID.txt
eligibility/: engine.py  rules.py
evaluation/: eval.py
ingestion/: pipeline.py  run_ingest.py  seed_data.py
kg/: graph_store.py  schema.py
retrieval/: vector_store.py
ui/frontend/: index.html  package-lock.json  package.json
ui/frontend/src/: App.jsx  index.css
ui/frontend/src/components/layout/: Layout.jsx  Navbar.jsx
ui/frontend/src/pages/: Dashboard.jsx  Eligibility.jsx  GraphPage.jsx  Landing.jsx  Search.jsx
